fixed some spacing issues week 5

--- a/website/view/css/style.css
+++ b/website/view/css/style.css
@@ -2856,9 +2856,6 @@ body {
   margin-top: 20px;
 }
 
-.weekbox {
-  position: absolute;
-}
 
 .live-lesson-info {
   font-weight:bold;
